hosteless-ingrss.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: retail-ui-anyhost
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: retail-ui
            port:
              number: 80
