traefik-ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: retail-ui
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: retail.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui
                port:
                  number: 80
